feat: sgd-replay-rotating-mnist
Make use of new dataset api

--- a/dynamax/rebayes/demos/sgd-replay-rotating-mnist.ipynb
+++ b/dynamax/rebayes/demos/sgd-replay-rotating-mnist.ipynb
@@ -21,33 +21,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "244677c0-2521-44b9-8058-27dcd930d3a3",
+   "id": "9de1d8cd-d3f6-4bc7-b0c8-4ad372d483c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import dynamax\n",
-    "import torchvision\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from augly import image\n",
-    "from dynamax.utils import datasets\n",
-    "from itertools import product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d2ba6511-c6d7-4484-95b8-61ed5eae43c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import jax\n",
     "import optax\n",
+    "import dynamax\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import jax.numpy as jnp\n",
     "import flax.linen as nn\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from dynamax.utils import datasets\n",
+    "from itertools import product\n",
     "from functools import partial\n",
     "from tqdm.notebook import tqdm\n",
     "from typing import Callable, Tuple\n",
@@ -57,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "40a39729-5d85-46e6-bcfa-2e68b31c85ea",
    "metadata": {},
    "outputs": [],
@@ -66,67 +56,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3dba8e0f-2407-4646-a435-07592b257942",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_processes = os.cpu_count() - 2\n",
-    "mnist_train = torchvision.datasets.MNIST(root=\"./data\", train=True, download=True)\n",
-    "images = np.array(mnist_train.data) / 255.0\n",
-    "labels = mnist_train.targets\n",
-    "\n",
-    "mnist_test = torchvision.datasets.MNIST(root=\"./data\", train=False)\n",
-    "images_test = np.array(mnist_test.data) / 255.0\n",
-    "labels_test = mnist_test.targets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4f3ba0f3-8f0b-4a0e-ba80-4194ffe643d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processor(X, angle):\n",
-    "    X_shift = image.aug_np_wrapper(X, image.rotate, degrees=angle)\n",
-    "    size_im = X_shift.shape[0]\n",
-    "    size_pad = (28 - size_im) // 2\n",
-    "    size_pad_mod = (28 - size_im) % 2\n",
-    "    X_shift = np.pad(X_shift, (size_pad, size_pad + size_pad_mod))\n",
-    "    \n",
-    "    return X_shift"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0f9147bf-2216-457c-bae7-b13ca5b1e4c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1032, 28, 28)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "label_target = 2\n",
-    "images_target = images[labels == label_target]\n",
-    "images_target_test= images_test[labels_test == label_target]\n",
-    "\n",
-    "images_target_test.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "903d4394-83e5-48be-8a6b-8144f9305c79",
+   "id": "f655d4b2-8fdb-4e7b-956d-c078351a5008",
    "metadata": {},
    "source": [
     "## Rotation"
@@ -134,59 +65,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d88c0646-eed8-4bf0-a34a-53245c2f3b1d",
+   "execution_count": 3,
+   "id": "934c8597-9e1f-45f1-805b-c7ff6f7ecfe3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_rotated_mnist(images, process, n_processes):\n",
-    "    n_configs = len(images)\n",
-    "    angles = np.random.uniform(0, 180, n_configs)\n",
-    "    configs = [{\"angle\": float(angle)} for angle in angles]\n",
-    "    images_proc = process(images, configs, n_processes=n_processes)\n",
-    "    return images_proc, angles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ec366361-87cc-4d96-b54a-0be1d7ff4ca4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 363 ms, sys: 1.42 s, total: 1.78 s\n",
-      "Wall time: 1.99 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "processer = datasets.DataAugmentationFactory(processor)\n",
+    "np.random.seed(314)\n",
+    "num_train = 100\n",
     "\n",
-    "np.random.seed(314)\n",
-    "X_train, y_train = generate_rotated_mnist(images_target, processer, n_processes)\n",
-    "X_test, y_test = generate_rotated_mnist(images_target_test, processer, n_processes)"
+    "train, test = datasets.load_rotated_mnist(target_digit=2)\n",
+    "X_train, y_train = train\n",
+    "X_test, y_test = test\n",
+    "\n",
+    "X_train = jnp.array(X_train)\n",
+    "y_train = jnp.array(y_train)\n",
+    "\n",
+    "X = jnp.array(X_train)[:num_train]\n",
+    "y = jnp.array(y_train)[:num_train]\n",
+    "\n",
+    "ix_sort = jnp.argsort(y)\n",
+    "X = X[ix_sort]\n",
+    "y = y[ix_sort]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "fd1f29b8-b537-494d-90a0-cd3286dc34df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(314)\n",
-    "n_test = 8\n",
-    "ixs_test = np.random.randint(0, len(X_train), size=n_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "3db96842-a08d-4731-8353-d8d4f3dccb2a",
+   "execution_count": 4,
+   "id": "d4cdbeb8-67a4-4b95-abd4-a60a1d80e562",
    "metadata": {},
    "outputs": [
     {
@@ -206,6 +111,10 @@
     }
    ],
    "source": [
+    "np.random.seed(314)\n",
+    "n_test = 8\n",
+    "ixs_test = np.random.randint(0, len(X_train), size=n_test)\n",
+    "\n",
     "fig, axs = plt.subplots(2, 4, figsize=(6, 3))\n",
     "axs = axs.ravel()\n",
     "for ax, ix in zip(axs, ixs_test):\n",
@@ -235,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b9be70d4-3a4f-4879-bf00-67c10e21a729",
    "metadata": {},
    "outputs": [],
@@ -282,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "802448e1-ea63-46c4-8992-801509fe4e86",
    "metadata": {},
    "outputs": [],
@@ -293,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "df3ee614-e9eb-4ac3-9671-2c8d0cc427d3",
    "metadata": {},
    "outputs": [],
@@ -305,31 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "3132853b-280b-4763-bf77-722d98d8995a",
    "metadata": {},
    "outputs": [],
    "source": [
     "buffer_size = 10 # Batch size\n",
     "num_epochs = 500"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "682eb796-2b92-48b3-b92d-fee65dd31751",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = jnp.array(X_train)\n",
-    "y_train = jnp.array(y_train)\n",
-    "\n",
-    "X = jnp.array(X_train)[:100]\n",
-    "y = jnp.array(y_train)[:100]\n",
-    "\n",
-    "ix_sort = jnp.argsort(y)\n",
-    "X = X[ix_sort]\n",
-    "y = y[ix_sort]"
    ]
   },
   {
@@ -342,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "098a4b92-0594-46f7-86a8-fdca4064a7f6",
    "metadata": {},
    "outputs": [],
@@ -381,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "bc473639-9068-400c-8645-de5808485a71",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "157513acc9a045c0922f6eaf306d95df",
+       "model_id": "93cc3ea1444b4ffe9a945abef3965be5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "928bc137-5925-4a50-bed7-61ea22d1b449",
    "metadata": {},
    "outputs": [
@@ -459,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "23ae6e9f-e1a5-438c-9cc8-f2dbf29cd702",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f646688e3b0>]"
+       "[<matplotlib.lines.Line2D at 0x7f95972821d0>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "d6768c44-30fe-4d2e-a0b5-0a8c3995de01",
    "metadata": {},
    "outputs": [],
@@ -526,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "27af056a-f4d5-480c-abc5-0dce73acf5f9",
    "metadata": {},
    "outputs": [],
@@ -568,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "4c214b53-eee6-4d15-a6e5-ab3340456867",
    "metadata": {},
    "outputs": [],
@@ -579,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "abf3e6d6-d7ae-4798-8a57-970895c2d02d",
    "metadata": {},
    "outputs": [],
@@ -617,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "0c62d007-1cd4-48b9-81f3-8cdc4be635b9",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "21a332cb-d6b3-49b9-938b-d263fc3171fc",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1058,7 @@
        "Text(0.5, 1.0, 'Log-RMSE — Test set')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1195,17 +1086,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "09d6f63a-3b9a-435b-81ed-99017110e48b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f646528ae60>"
+       "<matplotlib.legend.Legend at 0x7f959603f700>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1253,14 +1144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "6250bfe7-c547-4af4-9680-5ff37c45910a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b48c43eae054f5b9f0eab630977b088",
+       "model_id": "60e2c22386454e6bb7a86e0af436353c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1290,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "4ced280a-5377-46dc-b32a-b6f6df67b3fe",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "4f317d33-53ff-43ab-9087-d826f392ddbb",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1221,7 @@
        "DeviceArray(12449.465, dtype=float32)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,17 +1232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "bceaa2e1-efd1-49f1-9eda-c16be2ee773b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f6461a6c730>"
+       "<matplotlib.collections.PathCollection at 0x7f9597bcabc0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1373,7 +1264,6 @@
    ],
    "source": [
     "yhat_test = state.apply_fn(state.params, X_test).ravel()\n",
-    "\n",
     "plt.scatter(y_test, yhat_test)"
    ]
   }
