--- a/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_hmc.ipynb
@@ -109,8 +109,8 @@
                 "                    label=\"smoothed\" if i == 0 else None)[0]\n",
                 "        plt.fill_between(\n",
                 "            jnp.arange(num_timesteps),\n",
-                "            spc * i + smoothed_emissions[:, i] - 2 * jnp.sqrt(smoothed_emissions_std[:, i]),\n",
-                "            spc * i + smoothed_emissions[:, i] + 2 * jnp.sqrt(smoothed_emissions_std[:, i]),\n",
+                "            spc * i + smoothed_emissions[:, i] - 2 * smoothed_emissions_std[:, i],\n",
+                "            spc * i + smoothed_emissions[:, i] + 2 * smoothed_emissions_std[:, i],\n",
                 "            color=ln.get_color(),\n",
                 "            alpha=0.25,\n",
                 "        )\n",
@@ -758,7 +758,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.9.6 ('dynamax')",
+            "display_name": "base",
             "language": "python",
             "name": "python3"
         },
@@ -772,12 +772,12 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.9.6"
+            "version": "3.8.5 (default, Sep  4 2020, 02:22:02) \n[Clang 10.0.0 ]"
         },
         "orig_nbformat": 4,
         "vscode": {
             "interpreter": {
-                "hash": "92401d49bd83f70620e540b668b7091047c2ca041ed5ff6cc3954130de9aa1fc"
+                "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
             }
         }
     },
