--- a/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
+++ b/docs/notebooks/linear_gaussian_ssm/lgssm_learning.ipynb
@@ -157,8 +157,8 @@
     "                        label=\"smoothed\" if i == 0 else None)[0]\n",
     "        plt.fill_between(\n",
     "            jnp.arange(num_timesteps),\n",
-    "            spc * i + smoothed_emissions[:, i] - 2 * jnp.sqrt(smoothed_emissions_std[i]),\n",
-    "            spc * i + smoothed_emissions[:, i] + 2 * jnp.sqrt(smoothed_emissions_std[i]),\n",
+    "            spc * i + smoothed_emissions[:, i] - 2 * smoothed_emissions_std[i],\n",
+    "            spc * i + smoothed_emissions[:, i] + 2 * smoothed_emissions_std[i],\n",
     "            color=ln.get_color(),\n",
     "            alpha=0.25,\n",
     "        )\n",
@@ -350,7 +350,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 ('dynamax')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -364,11 +364,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Jun 29 2021, 05:25:02) \n[Clang 12.0.5 (clang-1205.0.22.9)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "92401d49bd83f70620e540b668b7091047c2ca041ed5ff6cc3954130de9aa1fc"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
