Translate half moons demo into Rebayes API

--- a/dynamax/rebayes/demos/dekf_demos/half_moons_demo.ipynb
+++ b/dynamax/rebayes/demos/dekf_demos/half_moons_demo.ipynb
@@ -19,15 +19,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "DpZyU1JJju0g"
       },
       "outputs": [],
       "source": [
         "try:\n",
-        "    from dynamax.generalized_gaussian_ssm.inference import *\n",
-        "    from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM\n",
+        "    import dynamax\n",
         "    import chex\n",
         "    import flax\n",
         "    import ml_collections\n",
@@ -46,8 +45,7 @@
         "    %pip install tqdm\n",
         "    print('installing pandas')\n",
         "    %pip install pandas\n",
-        "    from dynamax.generalized_gaussian_ssm.inference import *\n",
-        "    from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM\n",
+        "    import dynamax\n",
         "    import chex\n",
         "    import flax\n",
         "    import ml_collections\n",
@@ -57,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "g47C1c1Vj6_i"
       },
@@ -86,7 +84,14 @@
         "from sklearn import datasets\n",
         "from sklearn import preprocessing\n",
         "from dynamax.rebayes.ekf import RebayesEKF\n",
-        "from dynamax.rebayes.utils import *"
+        "from dynamax.rebayes.utils import *\n",
+        "from dynamax.rebayes.diagonal_inference import (\n",
+        "    DEKFParams,\n",
+        "    stationary_dynamics_variational_diagonal_extended_kalman_filter,\n",
+        "    stationary_dynamics_fully_decoupled_conditional_moments_gaussian_filter,\n",
+        "    _jacrev_2d,\n",
+        ")\n",
+        "from dynamax.generalized_gaussian_ssm.models import ParamsGGSSM"
       ]
     },
     {
@@ -151,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "bOV1Am9DPiW8"
       },
@@ -178,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "ZJVl8aY1PYOp"
       },
@@ -234,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "eCAcppZ0O99Q"
       },
@@ -260,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "6JE89yoYPjwZ"
       },
@@ -289,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "7xyDopLBkHAL"
       },
@@ -301,21 +306,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "lgrllPVYkIKR"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "(1000, 2)\n",
-            "(400, 2)\n",
-            "(600, 2)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(X_train.shape)\n",
         "print(X_val.shape)\n",
@@ -324,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "Q7ea71elmhki"
       },
@@ -349,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "2iJPPqJDm4zL"
       },
@@ -367,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "Zmdez2U_m-ct"
       },
@@ -410,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "n1SyzhAdnAzy"
       },
@@ -473,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "eShP4RcTnKig"
       },
@@ -487,7 +482,7 @@
         "    state_dim = flat_params.size\n",
         "    eps = 1e-4\n",
         "    sigmoid_fn = lambda w, x: jnp.clip(jax.nn.sigmoid(apply_fn(w, x)), eps, 1-eps) # Clip to prevent divergence\n",
-        "    fcekf_params = ParamsGGSSM(\n",
+        "    ekf_params = ParamsGGSSM(\n",
         "        initial_mean=flat_params,\n",
         "        initial_covariance=jnp.eye(state_dim) * init_var,\n",
         "        dynamics_function=lambda w, _: w,\n",
@@ -495,27 +490,17 @@
         "        emission_mean_function = lambda w, x: sigmoid_fn(w, x),\n",
         "        emission_cov_function = lambda w, x: sigmoid_fn(w, x) * (1 - sigmoid_fn(w, x))\n",
         "    )\n",
-        "\n",
-        "    # DEKF parameters\n",
-        "    dekf_params = DEKFParams(\n",
-        "        initial_mean=flat_params,\n",
-        "        initial_cov_diag=jnp.ones((state_dim,)) * init_var,\n",
-        "        dynamics_cov_diag=jnp.ones((state_dim,)) * 0.,\n",
-        "        emission_mean_function = lambda w, x: sigmoid_fn(w, x),\n",
-        "        emission_cov_function = lambda w, x: sigmoid_fn(w, x) * (1 - sigmoid_fn(w, x))\n",
-        "    )\n",
-        "\n",
         "    \n",
         "    # Loss function\n",
         "    prior_dist = MVN(loc=jnp.zeros(flat_params.shape), covariance_matrix=jnp.eye(state_dim) * init_var)\n",
         "    loss_fn = partial(reg_loss_fn, prior_dist = prior_dist, apply_fn = apply_fn, lamb = 1/train_len)\n",
         "\n",
-        "    return fcekf_params, dekf_params, flat_params, loss_fn, apply_fn"
+        "    return ekf_params, flat_params, loss_fn, apply_fn"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "M4sMGq_5nSCF"
       },
@@ -554,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "txOW5hAQnahQ"
       },
@@ -581,19 +566,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "Wa6lXX_coLRk"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "  0%|          | 0/27 [00:00<?, ?it/s]"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "gridsearch_result = dict()\n",
         "for init_var in tqdm(init_vars):\n",
@@ -617,6 +594,16 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def mean_cov_callback(bel, t, x, y):\n",
+        "    return bel.mean, bel.cov"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qrH3_a4vuo40"
       },
@@ -631,10 +618,14 @@
         "        for init_var in pbar:\n",
         "            pbar.set_description(f'model_dim={model_dim_type}, init_var={init_var:.3f}')\n",
         "            curr_index = f'{model_dim_type}_{init_var}'\n",
-        "            fcekf_params, dekf_params, flat_params, loss_fn, apply_fn = apply_hyperparam(init_var, model_dim, len(y_train))\n",
-        "            fcekf_post = conditional_moments_gaussian_filter(fcekf_params, EKFIntegrals(), y_train, inputs=X_train)\n",
-        "            fdekf_post = stationary_dynamics_fully_decoupled_conditional_moments_gaussian_filter(dekf_params, y_train, inputs=X_train)\n",
-        "            vdekf_post = stationary_dynamics_variational_diagonal_extended_kalman_filter(dekf_params, y_train, inputs=X_train)\n",
+        "            ekf_params, flat_params, loss_fn, apply_fn = apply_hyperparam(init_var, model_dim, len(y_train))\n",
+        "            estimators = {\n",
+        "                post_type: RebayesEKF(ekf_params, method = post_type) for \n",
+        "                post_type in ['fcekf', 'fdekf', 'vdekf']\n",
+        "            }\n",
+        "            fcekf_post, fdekf_post, vdekf_post = [\n",
+        "                estimator.scan(X_train, y_train, callback=mean_cov_callback)[1] for estimator in estimators.values()\n",
+        "            ]\n",
         "            posts = {'fcekf': fcekf_post, 'fdekf': fdekf_post, 'vdekf': vdekf_post}\n",
         "            for post_type, post in posts.items():\n",
         "                if post_type == 'fcekf':\n",
@@ -645,9 +636,9 @@
         "                    evaluate_posterior_map = lambda p, c: evaluate_posterior(p, c, apply_fn, X_test, y_test, 'map', 'diagonal')\n",
         "                    evaluate_posterior_mc = lambda p, c: evaluate_posterior(p, c, apply_fn, X_test, y_test, 'mc', 'diagonal')\n",
         "                    evaluate_posterior_immer = lambda p, c: evaluate_posterior(p, c, apply_fn, X_test, y_test, 'immer', 'diagonal')\n",
-        "                result_map = vmap(evaluate_posterior_map, (0, 0))(post.filtered_means, post.filtered_covariances)\n",
-        "                result_mc = vmap(evaluate_posterior_mc, (0, 0))(post.filtered_means, post.filtered_covariances)\n",
-        "                result_immer = vmap(evaluate_posterior_immer, (0, 0))(post.filtered_means, post.filtered_covariances)\n",
+        "                result_map = vmap(evaluate_posterior_map, (0, 0))(post[0], post[1])\n",
+        "                result_mc = vmap(evaluate_posterior_mc, (0, 0))(post[0], post[1])\n",
+        "                result_immer = vmap(evaluate_posterior_immer, (0, 0))(post[0], post[1])\n",
         "                result_by_type = {'map': result_map, 'mc': result_mc, 'immer': result_immer}\n",
         "                for est_type, result_nll in result_by_type.items():\n",
         "                    for eval_type in ['nll', 'ece']:\n",
@@ -843,15 +834,19 @@
         "for mlp in selected_mlps:\n",
         "    model_dim = model_dim_grid[mlp]\n",
         "    for init_var in selected_init_vars:\n",
-        "        curr_init_var = f'{init_var:.3f}'\n",
-        "        fcekf_params, dekf_params, flat_params, loss_fn, apply_fn = apply_hyperparam(init_var, model_dim, len(X))\n",
         "        # EKF Models\n",
-        "        fcekf_weight = conditional_moments_gaussian_filter(fcekf_params, EKFIntegrals(), y, inputs=X).filtered_means[-1]\n",
-        "        fcekf_cov = conditional_moments_gaussian_filter(fcekf_params, EKFIntegrals(), y, inputs=X).filtered_covariances[-1]\n",
-        "        fdekf_weight = stationary_dynamics_fully_decoupled_conditional_moments_gaussian_filter(dekf_params, y, inputs=X).filtered_means[-1]\n",
-        "        fdekf_cov = stationary_dynamics_fully_decoupled_conditional_moments_gaussian_filter(dekf_params, y, inputs=X).filtered_covariances[-1]\n",
-        "        vdekf_weight = stationary_dynamics_variational_diagonal_extended_kalman_filter(dekf_params, y, inputs=X).filtered_means[-1]\n",
-        "        vdekf_cov = stationary_dynamics_variational_diagonal_extended_kalman_filter(dekf_params, y, inputs=X).filtered_covariances[-1]\n",
+        "        curr_init_var = f'{init_var:.3f}'\n",
+        "        ekf_params, flat_params, loss_fn, apply_fn = apply_hyperparam(init_var, model_dim, len(X))\n",
+        "        estimators = {\n",
+        "            post_type: RebayesEKF(ekf_params, method = post_type) for \n",
+        "            post_type in ['fcekf', 'fdekf', 'vdekf']\n",
+        "        }\n",
+        "        fcekf_post, fdekf_post, vdekf_post = [\n",
+        "            estimator.scan(X_train, y_train, callback=mean_cov_callback)[1] for estimator in estimators.values()\n",
+        "        ]\n",
+        "        fcekf_weight, fcekf_cov = fcekf_post[0][-1], fcekf_post[1][-1]\n",
+        "        fdekf_weight, fdekf_cov = fdekf_post[0][-1], fdekf_post[1][-1]\n",
+        "        vdekf_weight, vdekf_cov = vdekf_post[0][-1], vdekf_post[1][-1]\n",
         "        \n",
         "        #SGD\n",
         "        lr, m = gridsearch_result[mlp][curr_init_var]\n",
@@ -880,7 +875,7 @@
         "        fig, ax = plt.subplots(figsize=(6, 5))\n",
         "        title=f'SGD: Initial Var={curr_init_var}, Model Dim=[{\",\".join(map(str, model_dim))}]'\n",
         "        plot_posterior_predictive(ax, X, y, title, input_grid, Z_sgd);\n",
-        "        fig.savefig(f'sgd_{mlp}_{init_var:.3f}.png', bbox_inches = 'tight')\n"
+        "        fig.savefig(f'sgd_{mlp}_{init_var:.3f}.png', bbox_inches = 'tight')"
       ]
     }
   ],
@@ -895,7 +890,7 @@
     },
     "gpuClass": "premium",
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -909,11 +904,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.8.10"
     },
     "vscode": {
       "interpreter": {
-        "hash": "91963cbe481ee1a2454667a1b384c4d96aeb7f6da354248a34bd6128b8a8f596"
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
       }
     }
   },
