style: sgd-replay-rotating-mnist
Add comments

--- a/dynamax/rebayes/demos/sgd-replay-rotating-mnist.ipynb
+++ b/dynamax/rebayes/demos/sgd-replay-rotating-mnist.ipynb
@@ -5,7 +5,13 @@
    "id": "28b999bf-d5d6-4bb7-a25b-0a52f3561ba7",
    "metadata": {},
    "source": [
-    "# Test rotation MNIST"
+    "# Test rotation MNIST\n",
+    "\n",
+    "In this notebook, we solve the regression problem of estimating the angle of rotation of a rotating MNIST image.\n",
+    "\n",
+    "The dataset of interest is the rotated MNIST dataset. To create this dataset, we first filter all images that belong to the digit `2`. For each of the filtered images, we assign a uniformly-distributed angle of rotation from $0$ to $\\pi$. Finally, we sort the training dataset in increasing order of rotation.\n",
+    "\n",
+    "**Q**: How well does an MLP perform on a test set of uniformly-distributed angles of rotation for unseen images?"
    ]
   },
   {
@@ -50,7 +56,7 @@
    "id": "f655d4b2-8fdb-4e7b-956d-c078351a5008",
    "metadata": {},
    "source": [
-    "## Rotation"
+    "## Creating training dataset"
    ]
   },
   {
