feat: BBB-1d-regression

--- a/dynamax/rebayes/demos/BBB-1d-regression.ipynb
+++ b/dynamax/rebayes/demos/BBB-1d-regression.ipynb
@@ -19,6 +19,7 @@
     "import jax\n",
     "import optax\n",
     "import distrax\n",
+    "import blackjax\n",
     "import numpy as np\n",
     "import jax.numpy as jnp\n",
     "import flax.linen as nn\n",
@@ -78,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f42697262c0>"
+       "<matplotlib.legend.Legend at 0x7f14d2b70e20>"
       ]
      },
      "execution_count": 4,
@@ -110,76 +111,66 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6a300f60-c1c0-4078-98a5-3b53985fc467",
+   "id": "301f3f65-986c-4116-8eb3-c39fdb03c2a7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import GPy\n",
     "def sample_gp(seed=None):\n",
     "    \"\"\"\n",
     "    Taken from\n",
     "    https://github.com/JavierAntoran/Bayesian-Neural-Networks\n",
     "    \"\"\"\n",
-    "    ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7ecfb82-181b-4819-8280-3ba7ffdee48e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import GPy\n",
-    "np.random.seed(2)\n",
-    "no_points = 400\n",
-    "lengthscale = 1\n",
-    "variance = 1.0\n",
-    "sig_noise = 0.3\n",
-    "x = np.random.uniform(-3, 3, no_points)[:, None]\n",
-    "x.sort(axis = 0)\n",
+    "    np.random.seed(2)\n",
+    "    no_points = 400\n",
+    "    lengthscale = 1\n",
+    "    variance = 1.0\n",
+    "    sig_noise = 0.3\n",
+    "    x = np.random.uniform(-3, 3, no_points)[:, None]\n",
+    "    x.sort(axis = 0)\n",
     "\n",
     "\n",
-    "k = GPy.kern.RBF(input_dim = 1, variance = variance, lengthscale = lengthscale)\n",
-    "C = k.K(x, x) + np.eye(no_points)*sig_noise**2\n",
+    "    k = GPy.kern.RBF(input_dim = 1, variance = variance, lengthscale = lengthscale)\n",
+    "    C = k.K(x, x) + np.eye(no_points)*sig_noise**2\n",
     "\n",
-    "y = np.random.multivariate_normal(np.zeros((no_points)), C)[:, None]\n",
-    "y = (y - y.mean())\n",
+    "    y = np.random.multivariate_normal(np.zeros((no_points)), C)[:, None]\n",
+    "    y = (y - y.mean())\n",
     "\n",
-    "ixs = np.random.choice(no_points, no_points, replace=False)\n",
-    "x = x[ixs]\n",
-    "y = y[ixs]\n",
-    "\n",
-    "\n",
-    "X_train = x[:200]\n",
-    "y_train = y[:200]\n",
-    "\n",
-    "X_test = x[200:]\n",
-    "y_test = y[200:]\n",
-    "\n",
-    "x_mean, x_std = X_train.mean(), X_train.std()\n",
-    "y_mean, y_std = y_train.mean(), y_train.std()\n",
-    "\n",
-    "X_train = (X_train - x_mean) / x_std\n",
-    "y_train = (y_train - y_mean) / y_std\n",
-    "\n",
-    "X_test = (X_test - x_mean) / x_std\n",
-    "y_test = (y_test - y_mean) / y_std\n",
-    "\n",
-    "X_train = jnp.array(X_train)\n",
-    "y_train = jnp.array(y_train).ravel()\n",
-    "\n",
-    "X_test = jnp.array(X_test)\n",
-    "y_test = jnp.array(y_test).ravel()\n",
-    "\n",
-    "xmap = ((X_train > -0.5) & (X_train < 0.5)).ravel()\n",
-    "X_train = X_train[~xmap]\n",
-    "y_train = y_train[~xmap]\n",
+    "    ixs = np.random.choice(no_points, no_points, replace=False)\n",
+    "    x = x[ixs]\n",
+    "    y = y[ixs]\n",
     "\n",
     "\n",
-    "plt.scatter(X_train, y_train, label=\"train\")\n",
-    "plt.scatter(X_test, y_test, alpha=0.5, label=\"test\")\n",
-    "plt.legend()\n",
-    "plt.grid(alpha=0.5)"
+    "    X_train = x[:200]\n",
+    "    y_train = y[:200]\n",
+    "\n",
+    "    X_test = x[200:]\n",
+    "    y_test = y[200:]\n",
+    "\n",
+    "    x_mean, x_std = X_train.mean(), X_train.std()\n",
+    "    y_mean, y_std = y_train.mean(), y_train.std()\n",
+    "\n",
+    "    X_train = (X_train - x_mean) / x_std\n",
+    "    y_train = (y_train - y_mean) / y_std\n",
+    "\n",
+    "    X_test = (X_test - x_mean) / x_std\n",
+    "    y_test = (y_test - y_mean) / y_std\n",
+    "\n",
+    "    X_train = jnp.array(X_train)\n",
+    "    y_train = jnp.array(y_train).ravel()\n",
+    "\n",
+    "    X_test = jnp.array(X_test)\n",
+    "    y_test = jnp.array(y_test).ravel()\n",
+    "\n",
+    "    xmap = ((X_train > -0.5) & (X_train < 0.5)).ravel()\n",
+    "    X_train = X_train[~xmap]\n",
+    "    y_train = y_train[~xmap]\n",
+    "\n",
+    "\n",
+    "    plt.scatter(X_train, y_train, label=\"train\")\n",
+    "    plt.scatter(X_test, y_test, alpha=0.5, label=\"test\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(alpha=0.5)"
    ]
   },
   {
@@ -355,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "eeb65fe8-a81f-40ab-b2c8-8e0c83c17cea",
    "metadata": {},
    "outputs": [
@@ -365,7 +356,7 @@
        "Text(0.5, 1.0, 'BNN Gauss — prior samples')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -413,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "id": "37578b58-f7f7-4dd9-9a39-1b05c8b22811",
    "metadata": {
     "tags": []
@@ -422,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "770053a1b137444aa971dbb8744b5e16",
+       "model_id": "8848be1be90f4efc85e6e62e38d3f71c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,8 +428,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 39.8 s, sys: 6.45 s, total: 46.2 s\n",
-      "Wall time: 25.7 s\n"
+      "CPU times: user 37.2 s, sys: 6.92 s, total: 44.2 s\n",
+      "Wall time: 24.5 s\n"
      ]
     }
    ],
@@ -479,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "fdcffbad-b61d-4418-9d91-f30cc62889d6",
    "metadata": {},
    "outputs": [
@@ -517,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "id": "425bef83-4f2a-4b38-850a-5bd01a301467",
    "metadata": {},
    "outputs": [
@@ -527,7 +518,7 @@
        "Array(0.3464903, dtype=float32)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "id": "18af93d5-2d06-4e08-9ff1-8fb7d085919d",
    "metadata": {},
    "outputs": [
@@ -586,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "id": "3f73b9ff-9aa0-41b6-bec3-507c07716eb3",
    "metadata": {},
    "outputs": [
@@ -625,17 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6c11e9dd-915a-49d8-8a9f-cbfe99c50923",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import blackjax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "81c5cbcc-9108-4c40-a89a-ce507c3b9d79",
    "metadata": {},
    "outputs": [],
@@ -670,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "923def94-cf34-485f-a748-5f0eac4524e5",
    "metadata": {},
    "outputs": [],
@@ -688,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "id": "86fcc9b3-3ab4-4d69-8ef4-534e51cc264d",
    "metadata": {},
    "outputs": [],
@@ -698,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "id": "9db0cdf0-4c6f-4040-9541-9828a6d77459",
    "metadata": {},
    "outputs": [],
@@ -713,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "id": "5d4455b8-f5f1-4c44-afd7-589f05f7159e",
    "metadata": {},
    "outputs": [
@@ -721,8 +702,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.5 s, sys: 534 ms, total: 18.1 s\n",
-      "Wall time: 27.3 s\n"
+      "CPU times: user 18.6 s, sys: 216 ms, total: 18.8 s\n",
+      "Wall time: 28.6 s\n"
      ]
     }
    ],
@@ -741,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 22,
    "id": "65df16a6-55fa-4c8f-a987-5347d93aadbc",
    "metadata": {},
    "outputs": [
