Fix single character typo

--- a/docs/notebooks/hmm/casino_hmm_learning.ipynb
+++ b/docs/notebooks/hmm/casino_hmm_learning.ipynb
@@ -397,7 +397,7 @@
     }
    ],
    "source": [
-    "# Print the paramters after learning\n",
+    "# Print the parameters after learning\n",
     "print(\"Full batch gradient descent params:\")\n",
     "print_params(fbgd_params)\n",
     "print(\"\")\n",
